fix overflow stuff on collection creation / add

--- a/src/app/collection/add-to-collection/add-to-collection.component.scss
+++ b/src/app/collection/add-to-collection/add-to-collection.component.scss
@@ -303,7 +303,7 @@
     margin: 25px 0;
     padding: 10px 75px;
     width: fit-content;
-    
+
     @media screen and (max-width: 300px) {
         font-size: 0.8rem;
         padding: 8px 40px;
@@ -369,7 +369,8 @@
     border: 1px solid #F5F5F5;
     border-radius: 45px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05);
-
+    overflow: hidden;
+    position: relative;
     @media screen and (max-width: 676px) {
         width: calc(100% - 2rem);
         min-width: 260px;
@@ -379,6 +380,7 @@
 .collection-selections-main {
     padding: 0 20px;
     flex: 8;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -421,10 +423,9 @@
 
     .collection-selections-main-content {
         position: relative;
-        height: 100%;
         width: 100%;
-        overflow-y: scroll;
-        
+        height: 100%;
+        margin-bottom: 100px;
         // Targets all NFTs
         .collection-selections-user-nfts {
             padding: 10px 0 30px 0;
@@ -457,13 +458,17 @@
 }
 
 .collection-selections-bottom-bar {
+    position: absolute;
+    height: 100px;
+    bottom: 0;
     flex: 1;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
     border-top: 1px solid #DADADA;
-
+    background-color: #FFFFFF;
+    z-index: 2;
     @media screen and (max-height: 600px) {
         padding: 15px 0;
     }
