--- a/src/app/collection/create-collection/create-collection.component.scss
+++ b/src/app/collection/create-collection/create-collection.component.scss
@@ -382,6 +382,7 @@
 }
 
 .collection-nft-selection-fieldset {
+    position: relative;
     height: 80%;
     width: 80%;
     display: flex;
@@ -390,7 +391,7 @@
     border: 1px solid #F5F5F5;
     border-radius: 45px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05);
-
+    overflow: hidden;
     @media screen and (max-width: 676px) {
         width: calc(100% - 2rem);
         min-width: 260px;
@@ -400,6 +401,7 @@
 .collection-selections-main {
     padding: 0 20px;
     flex: 8;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -444,8 +446,7 @@
         position: relative;
         height: 100%;
         width: 100%;
-        overflow-y: scroll;
-        
+        margin-bottom: 100px;
         // Targets all NFTs
         .collection-selections-user-nfts {
             padding: 10px 0 30px 0;
@@ -478,13 +479,17 @@
 }
 
 .collection-selections-bottom-bar {
+    position: absolute;
+    bottom: 0;
     flex: 1;
     width: 100%;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-around;
     border-top: 1px solid #DADADA;
-
+    background-color: #FFFFFF;
+    z-index: 2;
     @media screen and (max-height: 600px) {
         padding: 15px 0;
     }
