--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4167,11 +4167,12 @@ option {
   align-items: flex-start;
   justify-content: flex-start;
   flex-wrap: wrap;
-  margin: 0px -10px 0px;
+  height: calc(100% - 100px);
   padding: 0px;
   padding-left: 20px;
+  padding-bottom: 100px;
   list-style-type: none;
-  overflow-x: hidden;
+  overflow-y: scroll;
   @media screen and (max-width: 992px) {
     justify-content: center;
   }
